# narrative_analyzer

./: .gitignore  README.md  env.example  pipeline.py  pyproject.toml
app/: streamlit_app.py
data/: analysis.json  prompt.txt  tesla_news.json  tesla_news_alphavantage.json  tesla_news_googlenews.json  tesla_news_marketaux.json  tesla_news_newsapi.json
data/qdrant_storage/: meta.json
data/qdrant_storage/collection/narrative_articles/: storage.sqlite
src/dashboard/: streamlit_app.py
src/llm/: analyzer.py  ollama_analyzer.py  prompts.py
src/news/: alphavantage_client.py  finnhub_client.py  google_news_scraper.py  marketaux_client.py  newsapi_client.py
src/rag/: qdrant_store.py
