[project]
name = "narrative-analyzer"
version = "0.1.0"
description = "AI agent to analyze stock market narrative using news report, public opinion and social media"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "praw>=7.7.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
